# Thoughts-as-Planning

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/tap/: actions.hpp  config.hpp  encoder.hpp  layers.hpp  math_ops.hpp  planner.hpp  reward.hpp  training.hpp  transition.hpp  types.hpp
src/: actions.cpp  encoder.cpp  layers.cpp  main.cpp  math_ops.cpp  planner.cpp  reward.cpp  training.cpp  transition.cpp
